app/src/component_styles/local_card.css
.card {
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 10px;

    border: 1px solid #EACF44;
    border-radius: 10px;
}

.card:hover {
    cursor: pointer;
}


.card_img {
    width: 50%;
    height: 100%;
    border-radius: 10px;
    object-fit: cover;
}


.card_info {
    width: 50%;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.card_main_data {
    height: fit-content;
}


.card_tags {
    height: fit-content;
    white-space: nowrap;
    overflow: hidden;
    padding: 4px 0px;
    text-overflow: ellipsis;
}

.card_tags span{
    padding: 2.5px;
    margin: 2.5px;

    border: 1px solid black;
    border-radius: 5px;
}


.card_about {
    text-align: justify;
    overflow: hidden;
    text-overflow: ellipsis;
}


@media (min-width: 360px) {
    
    .card {
        width: 300px;
        height: 150px;
    }

    .card_img {
        width: 125px;
        height: 125px;
    }

    .card_info {
        height: 125px;
    }

    h2 {
        font-size: 0.6em;
    }

    span, p {
        font-size: 0.5em ;
    }

    .card_about {
        height: 32px;
    }

}


@media (min-width: 660px) {
    
    .card {
        width: 400px;
        height: 200px;
    }

    .card_img {
        width: 175px;
        height: 175px;
    }

    .card_info {
        height: 175px;
    }

    h2 {
        font-size: 0.8em;
    }

    span, p {
        font-size: 0.7em ;
    }

    .card_about {
        height: 64px;
    }

}


@media (min-width: 860px) {
    
    .card {
        width: 500px;
        height: 250px;
    }

    .card_img {
        width: 225px;
        height: 225px;
    }

    .card_info {
        height: 225px;
    }

    h2 {
        font-size: 1em;
    }

    span, p {
        font-size: 0.8em ;
    }

    .card_about {
        height: 88px;
    }

}

